--- a/Rough.html
+++ b/Rough.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Image Tag</h1><br>
+    <p>Modi ji is our prime minister</p>
+    <h3>Anant edited it</h3>
     <a href="https://prepbytes.com">open prepbites site</a><br><br>
     <img width="200" src="./10781769.jpg" alt="morning view">
     <ol type="A" reversed>
@@ -17,10 +19,11 @@
 
     </ol>
     <ul>
-       <li>mango</li>
+       <li>Mango</li>
        <li>Apple</li>
        <li>banana</li>
- 
     </ul>
-</body>    
+
+
+</body>
 </html>
